--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,71 @@
-#card {
-    background-color: azure;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+main{
+    display: flex;
+}
+
+header {
+  background: linear-gradient(to right, #6e95e9, #043361);
+  height: 100px;
+  font-size: xx-large;
+  font-weight: 900;
+  color: white;
+}
+
+#searchContainer {
+  border: solid 1px green;
+  flex: 0 0 20%;
+  padding: 20px;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+#searchContainter, h1 {
+  font-size: xx-large;
+  font-weight: 600;
+  color: black;
+}
+
+
+#searchContainter, input {
+    width: 90%;
+    padding: 10px;
+    margin: 5px 0;
+}
+
+#searchContainter, button {
+    width: 95%;
+    padding: 10px;
+    margin: 5px 0;
+    color: white;
+    background-color: #6e95e9;
+}
+
+#allWeatherContainer {
+  border: solid 1px black;
+  flex: 0 0 60%;
+  padding: 20px;
+}
+
+#todayContainer {
+  border: solid 1px navy;
+  min-height: 200px;
+}
+
+#forecastContainer {
+  border: solid 1px navy;
+  min-height: 200px;
+  display:flex;
+  flex-wrap: wrap;
+}
+
+#card {
+    background-color: #323D4F;
+    border: solid 1px red;
+    height: 200px;
+    margin: 10px;
+  }
