added functions to create new buttons upon searches if those cities have not been searched yet, save the searched cities in local storage, and use the saved cities to recreate used buttons on page load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,9 @@ header {
     background-color: #6e95e9;
 }
 
+#cityList{
+    border-top: 3px solid grey;
+}
 #allWeatherContainer {
   border: solid 1px black;
   flex: 0 0 60%;
