--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ header {
 }
 
 #searchContainer {
-  border: solid 1px green;
   flex: 0 0 20%;
   padding: 20px;
   flex-direction: column;
@@ -48,6 +47,10 @@ header {
 #cityList{
     border-top: 3px solid grey;
 }
+
+#cityList, button{
+    padding-top: 10px;
+}
 #allWeatherContainer {
   border: solid 1px black;
   flex: 0 0 60%;
@@ -63,7 +66,6 @@ header {
 }
 
 #forecastContainer {
-  border: solid 1px navy;
   min-height: 200px;
   display:flex;
   flex-wrap: wrap;
@@ -71,7 +73,6 @@ header {
 
 #card {
     background-color: #323D4F;
-    border: solid 1px red;
     height: 200px;
     margin: 10px;
     font-size: large;
